charts npm install

--- a/src/app/onboarding/login/container/login.component.html
+++ b/src/app/onboarding/login/container/login.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="Col-md-6 card-block"
                       style="float: none; margin: 0px 20px; text-align: center;border-bottom: 1px solid #D6D6D6;">
-                      <h2 class="kd" [routerLink]="['/portal/dashboard']">KD <span>Monitor</span></h2>
+                      <h2 class="kd">KD <span>Monitor</span></h2>
                     </div>
                     <!-- <h3 class="card-header">Login</h3> -->
                     <div class="card-block">
