--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -1,30 +1,28 @@
 <div class="main-content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-sm-4">
                     <div class="card card-stats">
                         <div class="card-header card-header-warning card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">content_copy</i>
+                                <i class="material-icons">money</i>
                             </div>
-                            <p class="card-category">Used Space</p>
-                            <h3 class="card-title">49/50
-                                <small>GB</small>
+                            <p class="card-category">Stock Holding</p>
+                            <h3 class="card-title">
                             </h3>
                         </div>
                         <div class="card-footer">
                             <div class="stats">
-                                <i class="material-icons text-danger">warning</i>
-                                <a href="javascript:void(0)">Get More Space...</a>
+                                    683,985,261
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-sm-4">
                     <div class="card card-stats">
                         <div class="card-header card-header-success card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">store</i>
+                                <i class="material-icons">person</i>
                             </div>
                             <p class="card-category">Revenue</p>
                             <h3 class="card-title">$34,245</h3>
@@ -36,11 +34,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-sm-4">
                     <div class="card card-stats">
                         <div class="card-header card-header-danger card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">info_outline</i>
+                                <i class="material-icons">computer</i>
                             </div>
                             <p class="card-category">Fixed Issues</p>
                             <h3 class="card-title">75</h3>
@@ -52,13 +50,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="col-lg-2 col-md-4 col-sm-4">
                     <div class="card card-stats">
                         <div class="card-header card-header-info card-header-icon">
                             <div class="card-icon">
                                 <i class="fa fa-twitter"></i>
                             </div>
-                            <p class="card-category">Followers</p>
+                            <p class="card-category">info_outline</p>
                             <h3 class="card-title">+245</h3>
                         </div>
                         <div class="card-footer">
@@ -68,6 +66,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-7 col-sm-7">
+                        <div class="card card-stats">
+                            <div class="card-header card-header-info card-header-icon">
+                                <div class="card-icon">
+                                    <i class="material-icons">credit_card</i>
+                                </div>
+                                <p class="card-category">Credit Facility</p>
+                                <h3 class="card-title">+245</h3>
+                            </div>
+                            <div class="card-footer">
+                                <div class="stats">
+                                    <i class="material-icons">update</i> Just Updated
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
