--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,8 +29,8 @@
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="javascript:void(0)">Password reset</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Profile</a>
-                        <a class="dropdown-item" href="javascript:void(0)">Logout</a>
+                        <a class="dropdown-item" [routerLink]="['/portal/profiling']"  href="javascript:void(0)">Profile</a>
+                        <a class="dropdown-item" [routerLink]="['/onboarding/login']" href="javascript:void(0)">Logout</a>
                     </div>
                 </li>
             </ul>
