--- a/src/app/portal/profiling/container/profiling.component.html
+++ b/src/app/portal/profiling/container/profiling.component.html
@@ -4,86 +4,70 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Update Profile</h4>
-                        <p class="card-category">Update distributor your profile</p>
+                        <h4 class="card-title">Profile Distributor</h4>
+                        <p class="card-category"></p>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form (ngSubmit)="profile()" [formGroup]="profileForm">
                             <div class="row">
-                                <div class="col-md-5">
-                                  <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Company (disabled)" disabled>
-                                    </mat-form-field>
-                                </div>
-                                <div class="col-md-3">
+                                <!-- <select [(ngModel)]="options"  class="" >
+                                     
+                                        <option selected="selected" disabled>Select Principal</option>   
+                                        <option *ngFor="let option of options" [ngValue]="option">{{option.name}}</option>
+                                   
+                                </select> -->
+                                <mat-form-field class="col-md-10">
+                                    <mat-label>Select Principal</mat-label>
+                                    <mat-select [(ngModel)]="selectedOption" formControlName="principal">
+                                        <mat-option *ngFor="let option of options" [value]="option">
+                                            {{option.name}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+
+
+                                <!-- <div class="col-md-10">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Username">
+                                      <input matInput placeholder="Select Principal" type="dropdown">
                                     </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
+                                  </div> -->
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10">
                                     <mat-form-field class="example-full-width">
-                                      <input matInput placeholder="Email address" type="email">
+                                        <input matInput placeholder="Enter Distributor Name" type="text">
+                                    </mat-form-field>
+                                </div>
+
+                            </div>
+                            <div class="row">
+                                <div class="col-md-10">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Enter Distributor Facility NUBAN" type="text">
                                     </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Fist Name" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-6">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Last Name" type="text">
-                                  </mat-form-field>
+                                <div class="col-md-10">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Enter Distributor Code" type="text">
+                                    </mat-form-field>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-12">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Adress" type="text">
-                                  </mat-form-field>
+                                <div class="col-md-10">
+                                    <mat-form-field class="example-full-width">
+                                        <input matInput placeholder="Enter Distributor Email" type="email">
+                                    </mat-form-field>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="City" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Country" type="text">
-                                  </mat-form-field>
-                                </div>
-                                <div class="col-md-4">
-                                  <mat-form-field class="example-full-width">
-                                    <input matInput placeholder="Postal Code" type="text">
-                                  </mat-form-field>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                  <label>About Me</label>
-                                  <mat-form-field class="example-full-width">
-                                     <textarea matInput placeholder="Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo."></textarea>
-                                   </mat-form-field>
-                                    <!-- <div class="form-group">
-  
-                                        <div class="form-group">
-                                            <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                                            <textarea class="form-control" rows="5"></textarea>
-                                        </div>
-                                    </div> -->
-                                </div>
-                            </div>
-                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Update Profile</button>
+                            <button mat-raised-button type="submit" class="btn btn-danger pull-right">Submit</button>
                             <div class="clearfix"></div>
                         </form>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card card-profile">
                     <div class="card-avatar">
                         <a href="javascript:void(0)">
@@ -99,8 +83,7 @@
                         <a href="javascript:void(0)" class="btn btn-danger btn-round">Follow</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
-  </div>
-  
+</div>
