--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -2,56 +2,66 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <mat-form-field class="card card-chart">
+                <div class="card card-chart">
                     <div class="card-header card-header-danger">
                         <div class="ct-chart" id="websiteViewsChart">
-                            <mat-label>Principal</mat-label>
+                            Principal
                         </div>
                     </div>
-                    <div class="card-body">
+                    <mat-form-field class="card-body">
+                        <mat-label>Principals</mat-label>
                         <mat-select>
                             <mat-option *ngFor="let food of foods" [value]="food.value">
                                 {{food.viewValue}}
                             </mat-option>
                         </mat-select>
-                    </div>
-
-                </mat-form-field>
-
+                    </mat-form-field>
+                </div>
             </div>
             <div class="col-md-3">
-                    <mat-form-field class="card card-chart">
-                        <div class="card-header card-header-danger">
-                            <div class="ct-chart" id="websiteViewsChart">
-                                <mat-label>Distributors</mat-label>
-                            </div>
+                <div class="card card-chart">
+                    <div class="card-header card-header-danger">
+                        <div class="ct-chart" id="websiteViewsChart">
+                            Distributors
                         </div>
-                        <div class="card-body">
-                            <mat-select>
-                                <mat-option *ngFor="let food of foods" [value]="food.value">
-                                    {{food.viewValue}}
-                                </mat-option>
-                            </mat-select>
-                        </div>
-    
+                    </div>
+                    <mat-form-field class="card-body">
+                        <mat-label>Distributors</mat-label>
+                        <mat-select>
+                            <mat-option *ngFor="let food of foods" [value]="food.value">
+                                {{food.viewValue}}
+                            </mat-option>
+                        </mat-select>
+
                     </mat-form-field>
-    
                 </div>
+            </div>
             <div class="col-md-6">
                 <div class="card card-chart">
                     <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="completedTasksChart"></div>
+                        <div class="ct-chart" id="completedTasksChart">
+                            Calender
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Completed Tasks</h4>
-                        <p class="card-category">Last Campaign Performance</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            <i class="material-icons">access_time</i> campaign sent 2 days ago
+                    <div class="row">
+                        <div class="col-md-4">
+                            <mat-form-field class="card-body">
+
+                                <input matInput [matDatepicker]="picker1" placeholder="Start date">
+                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                                <mat-datepicker #picker1></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-4">
+                            <mat-form-field class="card-body">
+                                <input matInput [matDatepicker]="picker2" placeholder="End date">
+                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                                <mat-datepicker #picker2></mat-datepicker>
+                            </mat-form-field>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="row">
@@ -139,10 +149,10 @@
         <div class="row">
             <div class="col-lg-8 col-md-14">
                 <div class="card">
-                        <div class="card-header card-header-danger">
-                                <h4 class="card-title">Distributor Stats</h4>
-                                <p class="card-category">New employees on 15th September, 2016</p>
-                            </div>
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Distributor Stats</h4>
+                        <p class="card-category">New employees on 15th September, 2016</p>
+                    </div>
                     <apx-chart [series]="options.series" [chart]="options.chart"></apx-chart>
                 </div>
             </div>
