top view component

--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -1,69 +1,6 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="websiteViewsChart">
-                            Principal
-                        </div>
-                    </div>
-                    <mat-form-field class="card-body">
-                        <mat-label>Principals</mat-label>
-                        <mat-select>
-                            <mat-option *ngFor="let food of foods" [value]="food.value">
-                                {{food.viewValue}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="websiteViewsChart">
-                            Distributors
-                        </div>
-                    </div>
-                    <mat-form-field class="card-body">
-                        <mat-label>Distributors</mat-label>
-                        <mat-select>
-                            <mat-option *ngFor="let food of foods" [value]="food.value">
-                                {{food.viewValue}}
-                            </mat-option>
-                        </mat-select>
-
-                    </mat-form-field>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="completedTasksChart">
-                            Calender
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <mat-form-field class="card-body">
-
-                                <input matInput [matDatepicker]="picker1" placeholder="Start date">
-                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                                <mat-datepicker #picker1></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                        <div class="col-md-4">
-                            <mat-form-field class="card-body">
-                                <input matInput [matDatepicker]="picker2" placeholder="End date">
-                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                                <mat-datepicker #picker2></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
+    <app-topview></app-topview>
         <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-4">
                 <div class="card card-stats">
