--- a/src/app/portal/facilitystats/container/facilitystats.component.html
+++ b/src/app/portal/facilitystats/container/facilitystats.component.html
@@ -20,120 +20,90 @@
 
             </div>
             <div class="col-md-3">
-                    <mat-form-field class="card card-chart">
-                        <div class="card-header card-header-danger">
-                            <div class="ct-chart" id="websiteViewsChart">
-                                <mat-label>Distributors</mat-label>
-                            </div>
+                <mat-form-field class="card card-chart">
+                    <div class="card-header card-header-danger">
+                        <div class="ct-chart" id="websiteViewsChart">
+                            <mat-label>Distributors</mat-label>
                         </div>
-                        <div class="card-body">
-                            <mat-select>
-                                <mat-option *ngFor="let food of foods" [value]="food.value">
-                                    {{food.viewValue}}
-                                </mat-option>
-                            </mat-select>
-                        </div>
-    
-                    </mat-form-field>
-    
-                </div>
+                    </div>
+                    <div class="card-body">
+                        <mat-select>
+                            <mat-option *ngFor="let food of foods" [value]="food.value">
+                                {{food.viewValue}}
+                            </mat-option>
+                        </mat-select>
+                    </div>
+
+                </mat-form-field>
+
+            </div>
             <div class="col-md-6">
-                <mat-form-field>
-                    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                  </mat-form-field>
+                <div class="card card-chart">
+                    <div class="card-header card-header-danger">
+                        <div class="ct-chart" id="completedTasksChart">
+                            Calender
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <mat-form-field class="card-body">
+
+                                <input matInput [matDatepicker]="picker1" placeholder="Start date">
+                                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                                <mat-datepicker #picker1></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                        <div class="col-md-4">
+                            <mat-form-field class="card-body">
+                                <input matInput [matDatepicker]="picker2" placeholder="End date">
+                                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                                <mat-datepicker #picker2></mat-datepicker>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-warning card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">money</i>
+
+            <div class="col-md-12">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="card-header card-header-warning card-header-icon">
+                            <div class="card-icon">
+                                <i class="material-icons">credit_card</i>
+                            </div>
+                            <p class="card-category">Credit Facility</p>
                         </div>
-                        <p class="card-category">Stock Holding</p>
-                        <h3 class="card-title">
-                        </h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358;683,985,261
+                        <mat-divider></mat-divider>
+                        <div class="card-header card-header-warning card-header-icon">
+                            <div class="stats">
+                                 &#8358;600,456,666 Approved
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-success card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">local_atm</i>
+                        <div class="card-header card-header-warning card-header-icon">
+                                <div class="stats">
+                                         &#8358;155,280,054 Availed
+                                    </div>
                         </div>
-                        <p class="card-category">Trade Debt</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358;123,110,500
+                        <div class="card-header card-header-warning card-header-icon">
+                                <div class="stats">
+                                         &#8358;23,124,406 Utilized
+                                    </div>
                         </div>
+
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-danger card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">computer</i>
-                        </div>
-                        <p class="card-category">Total Stock</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358; 123,100,500
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-info card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">person</i>
-                        </div>
-                        <p class="card-category">Distributors</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            134
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-7 col-sm-7">
-                <div class="card card-stats">
-                    <div class="card-header card-header-warning card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">credit_card</i>
-                        </div>
-                        <p class="card-category">Credit Facility</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            Availed: &#8358;600,456,666
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <div class="row">
             <div class="col-lg-8 col-md-14">
                 <div class="card">
-                        <div class="card-header card-header-danger">
-                                <h4 class="card-title">Distributor Stats</h4>
-                                <p class="card-category">New employees on 15th September, 2016</p>
-                            </div>
+                    <div class="card-header card-header-danger">
+                        <h4 class="card-title">Distributor Stats</h4>
+                        <p class="card-category">New employees on 15th September, 2016</p>
+                    </div>
                     <apx-chart [series]="options.series" [chart]="options.chart"></apx-chart>
                 </div>
             </div>
