--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -1,88 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
     <app-topview></app-topview>
-        <div class="row">
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-warning card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">money</i>
-                        </div>
-                        <p class="card-category">Stock Holding</p>
-                        <h3 class="card-title">
-                        </h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358;683,985,261
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-success card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">local_atm</i>
-                        </div>
-                        <p class="card-category">Trade Debt</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358;123,110,500
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-danger card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">computer</i>
-                        </div>
-                        <p class="card-category">Total Stock</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            &#8358; 123,100,500
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-md-4 col-sm-4">
-                <div class="card card-stats">
-                    <div class="card-header card-header-info card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">person</i>
-                        </div>
-                        <p class="card-category">Distributors</p>
-                        <h3 class="card-title"></h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            134
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-7 col-sm-7">
-                <div class="card card-stats">
-                    <div class="card-header card-header-warning card-header-icon">
-                        <div class="card-icon">
-                            <i class="material-icons">credit_card</i>
-                        </div>
-                        <p class="card-category">Credit Facility</p>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats">
-                            Availed: &#8358;600,456,666
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <app-fetch-stock></app-fetch-stock>
         <div class="row">
             <div class="col-lg-8 col-md-14">
                 <div class="card">
