--- a/src/app/components/topview/topview.component.html
+++ b/src/app/components/topview/topview.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3" *ngIf = "!isStaff">
             <div class="card card-chart">
                 <div class="card-header card-header-danger">
                     <div class="ct-chart" id="websiteViewsChart">
@@ -8,25 +8,25 @@
                 </div>
                 <mat-form-field *ngIf="profileserv.categories | async as data" class="card-body">
                     <mat-label>Principals</mat-label>
-                    <mat-select>
-                        <mat-option *ngFor="let food of data" [value]="food.id">
+                    <mat-select (selectionChange) = "onSelected($event.value)">
+                        <mat-option *ngFor="let food of data" [value]="food.customerID">
                             {{food.customerID}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" *ngIf = "isDistributor">
             <div class="card card-chart">
                 <div class="card-header card-header-danger">
                     <div class="ct-chart" id="websiteViewsChart">
                         Distributors
                     </div>
                 </div>
-                <mat-form-field *ngIf="profileserv.distributors | async as data" class="card-body">
+                <mat-form-field  class="card-body">
                     <mat-label>Distributors</mat-label>
                     <mat-select>
-                        <mat-option *ngFor="let food of data" [value]="food.distributorCode">
+                        <mat-option *ngFor="let food of distributors" [value]="food.distributorCode">
                             {{food.distributorName}}
                         </mat-option>
                     </mat-select>
