--- a/src/app/components/topview/topview.component.html
+++ b/src/app/components/topview/topview.component.html
@@ -25,7 +25,7 @@
                 </div>
                 <mat-form-field  class="card-body">
                     <mat-label>Distributors</mat-label>
-                    <mat-select [formControl]="disForm">
+                    <mat-select [formControl]="disForm" [disabled] = "disabledistdrp">
                         <mat-option *ngFor="let food of distributors" [value]="food.distributorCode">
                             {{food.distributorName}}
                         </mat-option>
