--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -18,7 +18,7 @@
                         <h4 class="card-title">Distributor Stats</h4>
                         <p class="card-category">New employees on 15th September, 2016</p>
                     </div>
-                    <apx-chart [series]="options.series" [chart]="options.chart"></apx-chart>
+                    <apx-chart [series]="options.series" [chart]="options.chart" [xaxis] = 'options.xaxis'></apx-chart>
                 </div>
             </div>
             <div class="col-lg-4 col-md-10">
@@ -206,18 +206,18 @@
             <div class="col-lg-4 col-md-10">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Credit facility statistics</h4>
-                        <p class="card-category"> Here is a subtitle for this table</p>
+                        <h4 class="card-title ">Percentage utilization</h4>
+                        <p class="card-category"> </p>
                     </div>
                     <div class="row" style="padding: 18% 0;">
                         <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
                         </div>
                         <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
                         </div>
                         <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
                         </div>
                     </div>
 
