--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <!-- TOP VIEW COMPONENT STARTS HERE -->
-        <app-topview [prinForm]="prinForm" [disForm]="disForm" [startDate]="startDate" [endDate]="endDate"
+        <app-topview [prinForm]="prinForm" [disForm]="disForm" [startDate]="startDate" [endDate]="endDate" [allDist] ='distributor'
             (triggerFilter)="getStockDetails($event)">
         </app-topview>
         <!-- TOP VIEW COMPONENT ENDS HERE-->
@@ -10,217 +10,95 @@
         <!-- FETCH STOCK COMPONENT STARTS HERE -->
         <app-fetch-stock [allStocks$]="allStocks$"></app-fetch-stock>
         <!-- FETCH STOCK COMPOENT ENDS HERE-->
-
-        <div class="row">
-            <div class="col-lg-8 col-md-14">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Distributor Stats</h4>
-                        <p class="card-category">New employees on 15th September, 2016</p>
+        <div *ngIf="mnthlyStocks$ | async as data ">
+            <div class="row" >
+                <div class="col-lg-8 col-md-14">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title">Distributor Statistics</h4>
+                            <p class="card-category"></p>
+                        </div>
+                        <apx-chart #chartObj [series]="options.series" [chart]="options.chart" [xaxis]='options.xaxis'>
+                        </apx-chart>
                     </div>
-                    <apx-chart [series]="options.series" [chart]="options.chart" [xaxis] = 'options.xaxis'></apx-chart>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-10">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Employees Stats</h4>
-                        <p class="card-category">New employees on 15th September, 2016</p>
-                    </div>
-                    <div class="card-body table-responsive">
-                        <table class="table table-hover">
-                            <thead class="text-warning">
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Salary</th>
-                                <th>Country</th>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Dakota Rice</td>
-                                    <td>$36,738</td>
-                                    <td>Niger</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
-                                    <td>Curaçao</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="col-lg-4 col-md-10">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title ">Percentage Efficiency</h4>
+                            <p class="card-category"> </p>
+                        </div>
+                        <div class="row" style="padding: 18% 0;">
+                            <div class="col-md-12">
+                                <apx-chart [series]="options2.series" [chart]="options2.chart"
+                                    [labels]="options2.labels"></apx-chart>
+                            </div>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
-
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-md-14">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Simple Table</h4>
-                        <p class="card-category"> Here is a subtitle for this table</p>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead class=" text-primary">
-                                    <th>
-                                        ID
-                                    </th>
-                                    <th>
-                                        Name
-                                    </th>
-                                    <th>
-                                        Country
-                                    </th>
-                                    <th>
-                                        City
-                                    </th>
-                                    <th>
-                                        Salary
-                                    </th>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            1
-                                        </td>
-                                        <td>
-                                            Dakota Rice
-                                        </td>
-                                        <td>
-                                            Niger
-                                        </td>
-                                        <td>
-                                            Oud-Turnhout
-                                        </td>
-                                        <td class="text-primary">
-                                            $36,738
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            2
-                                        </td>
-                                        <td>
-                                            Minerva Hooper
-                                        </td>
-                                        <td>
-                                            Curaçao
-                                        </td>
-                                        <td>
-                                            Sinaai-Waas
-                                        </td>
-                                        <td class="text-primary">
-                                            $23,789
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            3
-                                        </td>
-                                        <td>
-                                            Sage Rodriguez
-                                        </td>
-                                        <td>
-                                            Netherlands
-                                        </td>
-                                        <td>
-                                            Baileux
-                                        </td>
-                                        <td class="text-primary">
-                                            $56,142
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            4
-                                        </td>
-                                        <td>
-                                            Philip Chaney
-                                        </td>
-                                        <td>
-                                            Korea, South
-                                        </td>
-                                        <td>
-                                            Overland Park
-                                        </td>
-                                        <td class="text-primary">
-                                            $38,735
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            5
-                                        </td>
-                                        <td>
-                                            Doris Greene
-                                        </td>
-                                        <td>
-                                            Malawi
-                                        </td>
-                                        <td>
-                                            Feldkirchen in Kärnten
-                                        </td>
-                                        <td class="text-primary">
-                                            $63,542
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            6
-                                        </td>
-                                        <td>
-                                            Mason Porter
-                                        </td>
-                                        <td>
-                                            Chile
-                                        </td>
-                                        <td>
-                                            Gloucester
-                                        </td>
-                                        <td class="text-primary">
-                                            $78,615
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+            <div class="row">
+                <div class="col-lg-8 col-md-14">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title ">Monthly Stock</h4>
+                            <p class="card-category"> Here is a subtitle for this table</p>
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead class=" text-primary">
+                                        <th>
+                                            Month
+                                        </th>
+                                        <th>
+                                            Stock Value
+                                        </th>
+                                        <th>
+                                            Trade Debt
+                                        </th>
+                                        <th>
+                                            Trade Stock
+                                        </th>
+                                    </thead>
+                                    <tbody *ngFor="let tdata of data">
+                                        <tr>
+                                            <td>
+                                                {{tdata.month}}
+                                            </td>
+                                            <td>
+                                                {{tdata.stockValue | currency:"&#8358;":"symbol"}}
+                                            </td>
+                                            <td>
+                                                {{tdata.tradeDebt | currency:"&#8358;":"symbol"}}
+                                            </td>
+                                            <td>
+                                                {{tdata.totalStock | currency:"&#8358;":"symbol"}}
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4 col-md-10">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Percentage utilization</h4>
-                        <p class="card-category"> </p>
-                    </div>
-                    <div class="row" style="padding: 18% 0;">
-                        <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
+                <div class="col-lg-4 col-md-10">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title ">Percentage utilization</h4>
+                            <p class="card-category"> </p>
                         </div>
-                        <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
-                        </div>
-                        <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart" [labels] = "options2.labels"></apx-chart>
-                        </div>
-                    </div>
+                        <div class="row" style="padding: 18% 0;">
+                            <div class="col-md-12">
+                                <apx-chart [series]="options3.series" [chart]="options3.chart"
+                                    [labels]="options3.labels"></apx-chart>
+                            </div>
 
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
