--- a/src/app/portal/facilitystats/container/facilitystats.component.html
+++ b/src/app/portal/facilitystats/container/facilitystats.component.html
@@ -1,6 +1,15 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
+        <!-- TOP VIEW COMPONENT STARTS HERE -->
+        <app-topview [prinForm]="prinForm" [disForm]="disForm" [startDate]="startDate" [endDate]="endDate"
+            (triggerFilter)="getStockDetails($event)">
+        </app-topview>
+        <!-- TOP VIEW COMPONENT ENDS HERE-->
+
+        <!-- FETCH STOCK COMPONENT STARTS HERE -->
+        <app-creditfacility [allStocks$]="allStocks$"></app-creditfacility>
+        <!-- FETCH STOCK COMPOENT ENDS HERE-->
+        <!-- <div class="row">
             <div class="col-md-3">
                 <mat-form-field class="card card-chart">
                     <div class="card-header card-header-danger">
@@ -63,40 +72,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
+        </div> -->
 
-            <div class="col-md-12">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="card-header card-header-warning card-header-icon">
-                            <div class="card-icon">
-                                <i class="material-icons">credit_card</i>
-                            </div>
-                            <p class="card-category">Credit Facility</p>
-                        </div>
-                        <mat-divider></mat-divider>
-                        <div class="card-header card-header-warning card-header-icon">
-                            <div class="stats">
-                                 &#8358;600,456,666 Approved
-                            </div>
-                        </div>
-                        <div class="card-header card-header-warning card-header-icon">
-                                <div class="stats">
-                                         &#8358;155,280,054 Availed
-                                    </div>
-                        </div>
-                        <div class="card-header card-header-warning card-header-icon">
-                                <div class="stats">
-                                         &#8358;23,124,406 Utilized
-                                    </div>
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-        </div>
         <div class="row">
             <div class="col-lg-8 col-md-14">
                 <div class="card">
@@ -110,201 +87,77 @@
             <div class="col-lg-4 col-md-10">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title">Employees Stats</h4>
-                        <p class="card-category">New employees on 15th September, 2016</p>
+                        <h4 class="card-title">Percentage Efficiency</h4>
+                        <p class="card-category"></p>
                     </div>
-                    <div class="card-body table-responsive">
-                        <table class="table table-hover">
-                            <thead class="text-warning">
-                                <th>ID</th>
-                                <th>Name</th>
-                                <th>Salary</th>
-                                <th>Country</th>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Dakota Rice</td>
-                                    <td>$36,738</td>
-                                    <td>Niger</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Minerva Hooper</td>
-                                    <td>$23,789</td>
-                                    <td>Curaçao</td>
-                                </tr>
-                                <tr>
-                                    <td>3</td>
-                                    <td>Sage Rodriguez</td>
-                                    <td>$56,142</td>
-                                    <td>Netherlands</td>
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Philip Chaney</td>
-                                    <td>$38,735</td>
-                                    <td>Korea, South</td>
-                                </tr>
-                            </tbody>
-                        </table>
+
+                    <div class="row" style="padding: 18% 0;">
+                        <div class="col-md-12">
+                            <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                        </div>
+                        <!-- <div class="col-md-4">
+                                    <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                                </div>
+                                <div class="col-md-4">
+                                    <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
+                                </div> -->
                     </div>
+
+
+
                 </div>
             </div>
 
         </div>
         <div class="row">
-            <div class="col-lg-8 col-md-14">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Simple Table</h4>
-                        <p class="card-category"> Here is a subtitle for this table</p>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table">
-                                <thead class=" text-primary">
-                                    <th>
-                                        ID
-                                    </th>
-                                    <th>
-                                        Name
-                                    </th>
-                                    <th>
-                                        Country
-                                    </th>
-                                    <th>
-                                        City
-                                    </th>
-                                    <th>
-                                        Salary
-                                    </th>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            1
-                                        </td>
-                                        <td>
-                                            Dakota Rice
-                                        </td>
-                                        <td>
-                                            Niger
-                                        </td>
-                                        <td>
-                                            Oud-Turnhout
-                                        </td>
-                                        <td class="text-primary">
-                                            $36,738
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            2
-                                        </td>
-                                        <td>
-                                            Minerva Hooper
-                                        </td>
-                                        <td>
-                                            Curaçao
-                                        </td>
-                                        <td>
-                                            Sinaai-Waas
-                                        </td>
-                                        <td class="text-primary">
-                                            $23,789
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            3
-                                        </td>
-                                        <td>
-                                            Sage Rodriguez
-                                        </td>
-                                        <td>
-                                            Netherlands
-                                        </td>
-                                        <td>
-                                            Baileux
-                                        </td>
-                                        <td class="text-primary">
-                                            $56,142
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            4
-                                        </td>
-                                        <td>
-                                            Philip Chaney
-                                        </td>
-                                        <td>
-                                            Korea, South
-                                        </td>
-                                        <td>
-                                            Overland Park
-                                        </td>
-                                        <td class="text-primary">
-                                            $38,735
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            5
-                                        </td>
-                                        <td>
-                                            Doris Greene
-                                        </td>
-                                        <td>
-                                            Malawi
-                                        </td>
-                                        <td>
-                                            Feldkirchen in Kärnten
-                                        </td>
-                                        <td class="text-primary">
-                                            $63,542
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            6
-                                        </td>
-                                        <td>
-                                            Mason Porter
-                                        </td>
-                                        <td>
-                                            Chile
-                                        </td>
-                                        <td>
-                                            Gloucester
-                                        </td>
-                                        <td class="text-primary">
-                                            $78,615
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+              
+                <!-- Position Column -->
+                <ng-container matColumnDef="position">
+                  <th mat-header-cell *matHeaderCellDef> No. </th>
+                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                </ng-container>
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="weight">
+                  <th mat-header-cell *matHeaderCellDef> Weight </th>
+                  <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="symbol">
+                  <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                  <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
             <div class="col-lg-4 col-md-10">
                 <div class="card">
                     <div class="card-header card-header-danger">
-                        <h4 class="card-title ">Credit facility statistics</h4>
+                        <h4 class="card-title ">Percentage Utilization</h4>
                         <p class="card-category"> Here is a subtitle for this table</p>
                     </div>
                     <div class="row" style="padding: 18% 0;">
-                        <div class="col-md-4">
+                        <div class="col-md-12">
+                            <apx-chart [series]="options3.series" [chart]="options2.chart"></apx-chart>
+                        </div>
+                        <!-- <div class="col-md-4">
                             <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
                         </div>
                         <div class="col-md-4">
                             <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
-                        </div>
-                        <div class="col-md-4">
-                            <apx-chart [series]="options2.series" [chart]="options2.chart"></apx-chart>
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
